Изменил, с изменяемых в OrderProcessor на изменяемые, добавил методы в main.